--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -31,7 +31,7 @@ h6 {
   text-transform: uppercase;
   font-weight: 700;
 }
-hr.star-light,
+hr.star-light,hr.star-two,
 hr.star-primary {
   padding: 0;
   border: none;
@@ -40,36 +40,45 @@ hr.star-primary {
   max-width: 250px;
   margin: 25px auto 30px;
 }
-hr.star-light:after,
+hr.star-light:after,hr.star-two:after,
 hr.star-primary:after {
-  content: "\f005";
+  content: "\f17b";
   font-family: FontAwesome;
   display: inline-block;
   position: relative;
   top: -0.8em;
-  font-size: 2em;
+  font-size: 2.5em;
   padding: 0 0.25em;
 }
 hr.star-light {
   border-color: white;
 }
 hr.star-light:after {
-  background-color: #1d7cc4;
+  background-color: #bca166;
   color: white;
 }
+hr.star-two {
+  border-color: #bca166;
+}
+hr.star-two:after {
+  background-color: #000012;
+  color: #bca166;
+}
 hr.star-primary {
-  border-color: #2C3E50;
+  border-color: #bca166;
+  color: #bca166;
 }
 hr.star-primary:after {
-  background-color: white;
-  color: #2C3E50;
+  background-color: #000112;
+  color: #bca166;
+
 }
 .img-centered {
   margin: 0 auto;
 }
 header {
   text-align: center;
-  background: #1d7cc4;
+  background: #bca166;
   color: white;
 }
 header .container {
@@ -77,8 +86,8 @@ header .container {
   padding-bottom: 50px;
 }
 header img {
- border-radius: 30px;
  border: 7px solid #bca166;
+ display:block;margin:0 auto 20px;border-radius: 50%;
 }
 header .intro-text .name {
   display: block;
@@ -129,7 +138,7 @@ header .intro-text .skills {
   color: white;
 }
 .navbar-custom .navbar-nav li a:hover {
-  color: #1d7cc4;
+  color: #bca166;
   outline: none;
 }
 .navbar-custom .navbar-nav li a:focus,
@@ -138,7 +147,7 @@ header .intro-text .skills {
 }
 .navbar-custom .navbar-nav li.active a {
   color: white;
-  background: #1d7cc4;
+  background: #bca166;
 }
 .navbar-custom .navbar-nav li.active a:hover,
 .navbar-custom .navbar-nav li.active a:focus,
@@ -180,13 +189,15 @@ header .intro-text .skills {
 }
 section {
   padding: 100px 0;
+  background-color: #000112;
 }
 section h2 {
+  color: #bca166;
   margin: 0;
   font-size: 3em;
 }
 section.success {
-  background: #1d7cc4;
+  background:#bca166 ;
   color: white;
 }
 @media (max-width: 767px) {
@@ -208,7 +219,7 @@ section.success {
   margin: 0 auto;
 }
 #portfolio .portfolio-item .portfolio-link .caption {
-  background: rgba(24, 188, 156, 0.9);
+  background: rgba(188, 161, 102, 0.9);
   position: absolute;
   width: 100%;
   height: 100%;
@@ -371,8 +382,8 @@ fieldset[disabled] .btn-primary.active {
 }
 .btn-success {
   color: white;
-  background-color: #1d7cc4;
-  border-color: #1d7cc4;
+  background-color: #bca166;
+  border-color: #fff;
   font-weight: 700;
 }
 .btn-success:hover,
@@ -381,8 +392,8 @@ fieldset[disabled] .btn-primary.active {
 .btn-success.active,
 .open .dropdown-toggle.btn-success {
   color: white;
-  background-color: #128f76;
-  border-color: #11866f;
+  background-color:#1d7cc4 ;
+  border-color: #bca166;
 }
 .btn-success:active,
 .btn-success.active,
@@ -453,10 +464,13 @@ fieldset[disabled] .btn-success.active {
   min-height: 100%;
   padding: 100px 0;
   text-align: center;
+  background-color: #000012;
+  color: white;
 }
 .portfolio-modal .modal-content h2 {
   margin: 0;
   font-size: 3em;
+  color:#bca166;
 }
 .portfolio-modal .modal-content img {
   margin-bottom: 30px;
@@ -480,7 +494,7 @@ fieldset[disabled] .btn-success.active {
   height: 75px;
   width: 1px;
   margin-left: 35px;
-  background-color: #2C3E50;
+  background-color: #bca166;
   transform: rotate(45deg);
   -ms-transform: rotate(45deg);
   /* IE 9 */
@@ -491,7 +505,7 @@ fieldset[disabled] .btn-success.active {
 .portfolio-modal .close-modal .lr .rl {
   height: 75px;
   width: 1px;
-  background-color: #2C3E50;
+  background-color: #bca166;
   transform: rotate(90deg);
   -ms-transform: rotate(90deg);
   /* IE 9 */
